basic routing and prettier config

--- a/public/index.css
+++ b/public/index.css
@@ -417,18 +417,18 @@ textarea {
 
 input::-moz-placeholder, textarea::-moz-placeholder {
   opacity: 1;
-  color: #9ca3af;
+  color: #a1a1aa;
 }
 
 input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   opacity: 1;
-  color: #9ca3af;
+  color: #a1a1aa;
 }
 
 input::placeholder,
 textarea::placeholder {
   opacity: 1;
-  color: #9ca3af;
+  color: #a1a1aa;
 }
 
 button {
@@ -546,8 +546,7 @@ video {
  */
 
 *, ::before, ::after {
-  --tw-border-opacity: 1;
-  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+  border-color: currentColor;
 }
 
 .table {
@@ -624,9 +623,9 @@ video {
   border-width: 1px;
 }
 
-.border-indigo-900 {
+.border-orange {
   --tw-border-opacity: 1;
-  border-color: rgba(49, 46, 129, var(--tw-border-opacity));
+  border-color: rgba(243, 165, 17, var(--tw-border-opacity));
 }
 
 .px-4 {
